# Code-Generation-LLM

./: Cargo.toml  README.md  description_api_openai.md  markdown.md  prompt.txt  result.json  resultats.txt
java/: CalculSomme.java
python/: solution.py  test.py
python_operation_entre_variables/: solution.py
src/: java.rs  llm_api.rs  llm_prompt.rs  main.rs  python.rs
