[package]
name = "LLM_Gen"
version = "0.1.0"
edition = "2021"

[dependencies]

reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.128"
uuid = { version = "1", features = ["v4"] }
diesel = { version = "1.4", features = ["postgres"] }
regex = "1"
clap = { version = "4.0", features = ["derive"] }